# AdventOfCode2023

./: .gitignore  .gitmodules  Makefile  pyproject.toml
data/: Day09.txt  Day11.txt  Day22.txt  Day24.txt  Day25.txt
lib/: CMakeLists.txt  CMakePresets.json  Makefile  build_wrapper.py  setup.bat  setup.sh
lib/cffiTools/: CMakeLists.txt  build_wrapper.py  cffiTools.cmake
lib/day17/: day17.cpp
lib/day21/: build_day21.py  cdef_day21.h  day21.c  day21.h
src/: Day01.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  util.py
src/native/: __init__.py
test/: test_day01.py  test_day02.py
